--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/sequelize": "^9.0.0",
+    "@types/dotenv": "^8.2.0",
     "cache-manager": "^5.1.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.35.0",
+    "dotenv": "^16.0.3",
     "helmet": "^6.0.1",
     "i": "^0.3.7",
+    "mysql2": "^3.2.0",
     "nestjs-form-data": "^1.8.7",
     "npm": "^9.6.2",
     "reflect-metadata": "^0.1.13",
@@ -44,6 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
